# Detectron2_ros

./: .gitignore  CMakeLists.txt  setup.py
config/: R-50-Noh-NMS-crowdhuman.yaml  R-50-crowdhuman.yaml
launch/: detectron2_crowdhuman.launch
src/: detectron2_ros
